--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ SQLAlchemy==2.0.39
 typing_extensions==4.12.2
 Werkzeug==3.1.3
 zipp==3.21.0
+Flask==2.2.3
+Flask-SQLAlchemy==3.0.2
+Flask-Migrate==4.0.4
+psycopg2-binary==2.9.6
+python-dotenv==0.21.1
