--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
+alembic==1.15.1
 blinker==1.9.0
 click==8.1.8
 Flask==3.1.0
+Flask-Migrate==4.0.4
+Flask-SQLAlchemy==3.0.2
 importlib_metadata==8.6.1
 itsdangerous==2.2.0
 Jinja2==3.1.6
+Mako==1.3.9
 MarkupSafe==3.0.2
+psycopg2-binary==2.9.6
+python-dotenv==0.21.1
 SQLAlchemy==2.0.39
 typing_extensions==4.12.2
 Werkzeug==3.1.3
 zipp==3.21.0
-Flask-SQLAlchemy==3.0.2
-Flask-Migrate==4.0.4
-psycopg2-binary==2.9.6
-python-dotenv==0.21.1
