--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -1,20 +1,44 @@
-alembic==1.15.1
+alembic~=1.15.2
 blinker==1.9.0
-click==8.1.8
+click~=8.1.7
 Flask==3.1.0
-Flask-Migrate==4.0.4
+Flask-Migrate~=4.1.0
 Flask-SQLAlchemy==3.0.2
 importlib_metadata==8.6.1
 itsdangerous==2.2.0
-Jinja2==3.1.6
+Jinja2~=3.1.2
 Mako==1.3.9
-MarkupSafe==3.0.2
-psycopg2-binary==2.9.6
+MarkupSafe~=2.1.2
+psycopg2-binary~=2.9.10
 python-dotenv==0.21.1
-SQLAlchemy==2.0.39
-typing_extensions==4.12.2
+SQLAlchemy~=2.0.40
+typing_extensions~=4.13.0
 Werkzeug==3.1.3
 zipp==3.21.0
-Flask-JWT-Extended==4.6.0
-PyJWT==2.8.0
+Flask-JWT-Extended~=4.7.1
+PyJWT~=2.10.1
 
+
+Flask-SocketIO~=5.5.1
+idna~=3.4
+anyio~=3.7.0
+h11~=0.14.0
+jupyter~=1.0.0
+jupyterlab-pygments~=0.2.2
+pip~=25.0.1
+attrs~=23.1.0
+tornado~=6.3.2
+Pygments~=2.15.1
+ipython~=8.13.2
+requests~=2.32.3
+websocket-client~=1.5.2
+python-engineio~=4.12.0
+simple-websocket~=1.1.0
+psutil~=5.9.5
+bidict~=0.23.1
+python-socketio~=5.13.0
+decorator~=5.1.1
+setuptools~=65.5.0
+packaging~=23.1
+wsproto~=1.2.0
+flask-cors~=5.0.1
