--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^7.5.0",
+    "socket.io-client": "^4.8.1",
     "src": "^1.1.2"
   },
   "devDependencies": {
