--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@react-google-maps/api": "^2.20.7",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
