--- a/front/package.json
+++ b/front/package.json
@@ -16,10 +16,11 @@
     "@react-oauth/google": "^0.12.2",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
+    "framer-motion": "^12.23.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^7.5.0",
+    "react-router-dom": "^7.6.3",
     "socket.io-client": "^4.8.1",
     "src": "^1.0.0"
   },
